# eup_config

./: README.md  pyproject.toml  readme.md
src/eup_config/: __init__.py  demo.py
src/eup_configurator/: __init__.py  core.py
src/eup_configurator.egg-info/: PKG-INFO  SOURCES.txt
