[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EUP-Configuration"
version = "1.0.0"
description = "Eine einfache Konfigurationsprojekt für Python."
readme = "readme.md"
requires-python = ">=3.10"
authors = [
    { name = "Givara Ebo", email = "givara.ebo@ebouprime.com" }
]

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]